Everything other than route blocking and maps integration done

--- a/package.json
+++ b/package.json
@@ -26,12 +26,20 @@
     "@coreui/react": "^5.9.2",
     "@coreui/react-chartjs": "^3.0.0",
     "@coreui/utils": "^2.0.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.6",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "classnames": "^2.5.1",
     "core-js": "^3.47.0",
+    "date-fns": "^4.1.0",
+    "export-to-csv": "^1.4.0",
     "formik": "^2.4.9",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
+    "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
