Parcel location tracking done

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@coreui/utils": "^2.0.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.13.2",
@@ -40,9 +41,11 @@
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
     "redux": "5.0.1",
