--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
+    "react-toastify": "^11.0.5",
     "redux": "5.0.1",
     "simplebar-react": "^3.3.2",
+    "socket.io-client": "^4.8.3",
     "yup": "^1.7.1"
   },
   "devDependencies": {
